WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17340
WebCore/platform/Timer.cpp fails to build with gcc 4.3
https://bugs.webkit.org/show_bug.cgi?id=17340
Summary
WebCore/platform/Timer.cpp fails to build with gcc 4.3
Bernhard Rosenkraenzer
Reported
2008-02-13 02:32:44 PST
../../../WebCore/platform/Timer.cpp: In function 'bool WebCore::operator<(const WebCore::TimerHeapElement&, const WebCore::TimerHeapElement&)': ../../../WebCore/platform/Timer.cpp:107: error: 'UINT_MAX' was not declared in this scope make[1]: *** [tmp/Timer.o] Error 1 UINT_MAX is defined in <limits.h>, which isn't being #included.
Attachments
fix
(542 bytes, patch)
2008-02-13 02:36 PST
,
Bernhard Rosenkraenzer
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Bernhard Rosenkraenzer
Comment 1
2008-02-13 02:33:28 PST
This happens to work with older versions of gcc because #include <limits> used to #include <climits> as well. gcc 4.3 trims down on header interdependencies
Bernhard Rosenkraenzer
Comment 2
2008-02-13 02:36:02 PST
Created
attachment 19108
[details]
fix
Darin Adler
Comment 3
2008-02-13 04:12:58 PST
Comment on
attachment 19108
[details]
fix We would use <limits.h> rather that <climits>.
Darin Adler
Comment 4
2008-02-13 04:28:27 PST
Again had to remove tabs and apply the patch by hand. Committed revision 30193.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug