        Reviewed by Darin.

- fix http://bugs.webkit.org/show_bug.cgi?id=17340
          WebCore/platform/Timer.cpp fails to build with gcc 4.3

        * platform/Timer.cpp: Add include of <limits.h> since this file uses UINT_MAX.



Canonical link: https://commits.webkit.org/24001@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30193 268f45cc-cd09-0410-ab3c-d52691b4dbfc